build: added Stripe and Subsciption Management

--- a/.env.example
+++ b/.env.example
@@ -21,8 +21,8 @@ NEXT_PUBLIC_WEB_SEARCH_ENABLED=false  # Disables the ability to toggle web searc
 SERP_API_KEY=*** # https://serper.dev/ for an API key
 
 # Auth providers. Required to enable sign in, in production. Development mode uses local auth.
-GOOGLE_CLIENT_ID=***
-GOOGLE_CLIENT_SECRET=***
+GOOGLE_CLIENT_ID=1007183485387-dcui3e8j574jqh9qe3aqbg8dbp8uhcsv
+GOOGLE_CLIENT_SECRET=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
 GITHUB_CLIENT_ID=***
 GITHUB_CLIENT_SECRET=***
 DISCORD_CLIENT_SECRET=***
