--- a/package.json
+++ b/package.json
@@ -17,75 +17,76 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.4.2",
+    "@prisma/client": "^5.7.0",
     "@radix-ui/react-switch": "^1.0.3",
-    "@radix-ui/react-toast": "^1.1.4",
-    "@radix-ui/react-tooltip": "^1.0.6",
-    "@react-pdf/renderer": "^3.1.12",
-    "@tanstack/react-query": "^4.29.7",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@react-pdf/renderer": "^3.1.14",
+    "@stripe/stripe-js": "^2.2.1",
+    "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.30.0",
-    "@trpc/next": "^10.30.0",
+    "@trpc/next": "^10.44.1",
     "@trpc/react-query": "^10.30.0",
     "@trpc/server": "^10.30.0",
-    "@uiball/loaders": "^1.3.0",
+    "@uiball/loaders": "^1.3.1",
     "@upstash/ratelimit": "^0.4.4",
-    "@vercel/analytics": "^1.0.2",
-    "@vercel/edge": "^1.0.1",
-    "axios": "^0.26.0",
+    "@vercel/analytics": "^1.1.1",
+    "@vercel/edge": "^1.1.1",
+    "axios": "^1.6.2",
     "cheerio": "^1.0.0-rc.12",
-    "chromadb": "^1.5.9",
+    "chromadb": "^1.7.1",
     "clsx": "^2.0.0",
-    "framer-motion": "^10.16.4",
+    "framer-motion": "^10.16.16",
     "html-to-image": "^1.11.11",
     "i18next": "^22.5.1",
-    "langchain": "^0.0.91",
+    "langchain": "^0.0.208",
     "micro": "^10.0.1",
     "micro-cors": "^0.1.1",
-    "next": "13.5.5",
-    "next-auth": "^4.23.2",
+    "next": "^14.0.4",
+    "next-auth": "^4.24.5",
     "next-i18next": "^13.3.0",
     "nextjs-google-analytics": "^2.3.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^12.3.1",
-    "react-icons": "^4.11.0",
+    "react-icons": "^4.12.0",
     "react-markdown": "^8.0.7",
     "rehype-highlight": "^6.0.0",
     "remark-gfm": "^4.0.0",
-    "stripe": "^13.8.0",
+    "stripe": "^13.11.0",
     "superjson": "1.13.1",
     "tailwindcss-radix": "^2.8.0",
     "uuid": "^9.0.1",
-    "zod": "^3.22.0",
-    "zustand": "^4.4.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
-    "@commitlint/cli": "^18.0.0",
-    "@commitlint/config-conventional": "^17.6.5",
+    "@commitlint/cli": "^18.4.3",
+    "@commitlint/config-conventional": "^17.8.1",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^14.0.0",
-    "@types/micro-cors": "^0.1.2",
-    "@types/node": "^20.8.6",
+    "@testing-library/react": "^14.1.2",
+    "@types/micro-cors": "^0.1.5",
+    "@types/node": "^20.10.4",
     "@types/prettier": "^3.0.0",
-    "@types/react": "^18.2.21",
-    "@types/react-dom": "^18.2.14",
-    "@types/uuid": "^9.0.4",
-    "@typescript-eslint/eslint-plugin": "^5.60.0",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.17",
+    "@types/uuid": "^9.0.7",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
-    "autoprefixer": "^10.4.15",
+    "autoprefixer": "^10.4.16",
     "cross-env": "^7.0.3",
-    "eslint": "^8.46.0",
+    "eslint": "^8.55.0",
     "eslint-config-next": "13.5.3",
     "husky": "^8.0.3",
-    "jest": "^29.6.4",
-    "jest-environment-jsdom": "^29.6.3",
-    "lint-staged": "^14.0.0",
-    "postcss": "^8.4.30",
-    "prettier": "^3.0.3",
-    "prettier-plugin-tailwindcss": "^0.5.4",
-    "prisma": "^5.2.0",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.1.6"
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "lint-staged": "^14.0.1",
+    "postcss": "^8.4.32",
+    "prettier": "^3.1.1",
+    "prettier-plugin-tailwindcss": "^0.5.9",
+    "prisma": "^5.7.0",
+    "tailwindcss": "^3.3.6",
+    "typescript": "^5.3.3"
   },
   "ct3aMetadata": {
     "initVersion": "7.4.0"
